# rustifi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  TODO.md  sailr.json
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci.yml  commit_messages.yml  release_plz.yml
examples/fetch-all/: Cargo.toml
examples/rustifi-cli/: Cargo.toml
examples/rustifi-cli/src/: fetcher.rs  lib.rs
src/: client.rs  error.rs  lib.rs  main.rs  pagination.rs  stats.rs  wrappers.rs
src/api/: acl.rs  clients.rs  devices.rs  dns.rs  endpoint.rs  firewall.rs  hotspot.rs  mod.rs  networks.rs  resources.rs  sites.rs  traffic.rs  wifi.rs
src/auth/: mod.rs
src/controller/: mod.rs  sites.rs
src/controller/stat/sites/: res_types.rs
src/device/: mod.rs
src/device/models/: mod.rs
src/device/models/access_points/: UXG-WB_Example_In_Progress.json  UXG-WB_WIP.json  mod.rs  models.rs
src/models/: access_point.rs  client.rs  common.rs  device.rs  device_details.rs  device_statistics.rs  firewall.rs  mod.rs  site.rs  site_device.rs  voucher.rs  wifi.rs
src/response/: mod.rs  wrapper.rs
src/responses/stat/: devices.rs
src/site/: mod.rs  stats_type.rs  types.rs
src/site/rest/settings/: res_types.rs
src/site/rest/wlanconf/: res_types.rs
src/site/stat/: mod.rs
src/site/stat/devices/: mod.rs  res_types.rs
src/site/stat/devices_basic/: res_types.rs
src/types/: antenna.rs  config_net.rs  ip.rs  media.rs  mod.rs  net_config.rs  network.rs  port.rs  radio.rs  system_stats.rs  temperature.rs  uplink.rs  user_stats.rs  version.rs
src/utils/: channel_conversion.rs  mod.rs
tests/: device_tests.rs  pagination_tests.rs  response_tests.rs  stats_tests.rs  types.rs  types_extended.rs
