[package]
name = "rustifi"
version = "0.4.1"
edition = "2024"
authors = ["Judah Fuller <judah@judahfuller.com>"]
description = "Open source rust library to interface with Ubiquiti's Unifi Controller."
license = "MIT"
readme = "README.md"
repository = "https://github.com/JudahZF/rustifi"
keywords = ["unifi", "ubiquiti"]
exclude = [
    ".github/*",
    "tests/*",
    "CLAUDE.md",
    "cliff.toml",
    "release-plz.toml",
    "sailr.json",
]

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
