[package]
name = "rustifi-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool to fetch and display data from UniFi controllers"
authors = ["Judah Fuller <judah@judahfuller.com>"]

[dependencies]
rustifi = { path = "../.." }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
